Change in navbar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="main">
+<div class="main sticky-top">
 <nav class=" navbar navbar-expand-sm  bg-dark border-bottom border-body" data-bs-theme="dark">
     <div class="container-fluid">
       <a class="navbar-brand">BloRag</a>
